--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
 
 
 
-</body>
+<footer class="footer">
+   <p>
+    <a href="https://www.canada.ca/en/services/business/ip/copyright.html" target= "_blank" title= "copyright" > Copyright © </a> Sarah Ryan 2023.
+    </p> 
+    </footer>
 
+
+    </body>
 
 </html>
