--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <meta name="author" content="Sarah Ryan">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<!-- VIEWABLE CONTENT-->
+
 <body>
+    <!-- Glossary Section-->
 <div>
     <header>
         <h1> GIT COMMANDS GLOSSARY</h1>
@@ -59,10 +60,9 @@
 <dd>Pushing is the opposite of fetching (with a few caveats). It lets you move a local branch to another repository, which serves as a convenient way to publish contributions.
      This is like svn commit, but it sends a series of commits instead of a single change set. </dd>
 
-
 </dl>
 
-
+<!--footer section-->
 
 <footer class="footer">
    <p>
