--- a/index.html
+++ b/index.html
@@ -13,75 +13,80 @@
 
 <body>
     <!-- Glossary Section-->
-    <div>
-        <header>
-            <h1> GIT COMMANDS GLOSSARY</h1>
-        </header>
-        <img src="./images/git_logomark-black@2x.png" alt="git" class="git-image" </div> 
-        <div>
-            <dl>
-                <dt>git add</dt>
-                <dd>Moves changes from the working directory to the staging area.
-                    This gives you the opportunity to prepare a snapshot before committing it to the official history.
-                </dd>
 
-                <dt>git branch</dt>
-                <dd>This command is your general-purpose branch administration tool.
-                    It lets you create isolated development environments within a single repository. </dd>
+    <header class="main-header">
 
-                <dt>git clone</dt>
-                <dd>Creates a copy of an existing Git repository.
-                    Cloning is the most common way for developers to obtain a working copy of a central repository.
-                </dd>
+        <h1> GIT COMMANDS GLOSSARY</h1>
+    </header>
+    <img src="./images/git_logomark-black@2x.png" alt="git" class="git-image" <div>
+    <dl>
+        <dt>git add</dt>
+        <dd>Moves changes from the working directory to the staging area.
+            This gives you the opportunity to prepare a snapshot before committing it to the official
+            history.
+        </dd>
 
-                <dt>git commit</dt>
-                <dd>Takes the staged snapshot and commits it ti the prjoect history. Combined with git add,
-                    this defines the basic workflow for all git users. </dd>
+        <dt>git branch</dt>
+        <dd>This command is your general-purpose branch administration tool.
+            It lets you create isolated development environments within a single repository. </dd>
 
-                <dt>git commit-amend</dt>
-                <dd>Passing the --amend flag to git commit lets you amend the most recent commit.
-                    This is very useful when you forget to stage a file or omit important information from the commit
-                    message.
-                </dd>
+        <dt>git clone</dt>
+        <dd>Creates a copy of an existing Git repository.
+            Cloning is the most common way for developers to obtain a working copy of a central repository.
+        </dd>
 
-                <dt>git config</dt>
-                <dd>A convenient way to set configuration options for your Git installation.
-                    You'll typically only need to use this immediately after installing Git on a new development
-                    machine.
-                </dd>
+        <dt>git commit</dt>
+        <dd>Takes the staged snapshot and commits it ti the prjoect history. Combined with git add,
+            this defines the basic workflow for all git users. </dd>
 
-                <dt>git fetch</dt>
-                <dd>Fetching downloads a branch from another repository, along with all of its associated commits and
-                    files.
-                    But, it doesn't try to integrate anything into your local repository.
-                    This gives you a chance to inspect changes before merging them with your project. </dd>
+        <dt>git commit-amend</dt>
+        <dd>Passing the --amend flag to git commit lets you amend the most recent commit.
+            This is very useful when you forget to stage a file or omit important information from the
+            commit
+            message.
+        </dd>
 
-                <dt>git merge</dt>
-                <dd>A powerful way to integrate changes from divergent branches.
-                    After forking the project history with git branch, git merge lets you put it back together again.
-                </dd>
+        <dt>git config</dt>
+        <dd>A convenient way to set configuration options for your Git installation.
+            You'll typically only need to use this immediately after installing Git on a new development
+            machine.
+        </dd>
 
-                <dt>git pull</dt>
-                <dd>Pulling is the automated version of git fetch. It downloads a branch from a remote repository,
-                    then immediately merges it into the current branch. This is the Git equivalent of svn update. </dd>
+        <dt>git fetch</dt>
+        <dd>Fetching downloads a branch from another repository, along with all of its associated commits
+            and
+            files.
+            But, it doesn't try to integrate anything into your local repository.
+            This gives you a chance to inspect changes before merging them with your project. </dd>
 
-                <dt>git push</dt>
-                <dd>Pushing is the opposite of fetching (with a few caveats). It lets you move a local branch to another
-                    repository, which serves as a convenient way to publish contributions.
-                    This is like svn commit, but it sends a series of commits instead of a single change set. </dd>
+        <dt>git merge</dt>
+        <dd>A powerful way to integrate changes from divergent branches.
+            After forking the project history with git branch, git merge lets you put it back together
+            again.
+        </dd>
 
-            </dl>
-        </div>
+        <dt>git pull</dt>
+        <dd>Pulling is the automated version of git fetch. It downloads a branch from a remote repository,
+            then immediately merges it into the current branch. This is the Git equivalent of svn update.
+        </dd>
 
-        <!--footer section-->
+        <dt>git push</dt>
+        <dd>Pushing is the opposite of fetching (with a few caveats). It lets you move a local branch to
+            another
+            repository, which serves as a convenient way to publish contributions.
+            This is like svn commit, but it sends a series of commits instead of a single change set. </dd>
 
-        <footer class="footer">
-            <p>
-                <a href="https://www.canada.ca/en/services/business/ip/copyright.html" target="_blank"
-                    title="copyright">
-                    Copyright © </a> Sarah Ryan 2023.
-            </p>
-        </footer>
+    </dl>
+    </div>
+
+    <!--footer section-->
+
+    <footer class="footer">
+        <p>
+            <a href="https://www.canada.ca/en/services/business/ip/copyright.html" target="_blank" title="copyright">
+                Copyright ©</a> Sarah Ryan 2023.
+        </p>
+    </footer>
 
 
 </body>
