--- a/index.html
+++ b/index.html
@@ -15,10 +15,19 @@
     <!-- Glossary Section-->
 
     <header class="main-header">
-
-        <h1> GIT COMMANDS GLOSSARY</h1>
+        <table>
+        <tr>
+<td>
+    <img src="./images/git_logomark-black@2x.png" alt="git" class="git-image">
+</td>
+<td>
+    <h1> GIT COMMANDS GLOSSARY</h1>
+</td>
+        </tr>
+        </table>
     </header>
-    <img src="./images/git_logomark-black@2x.png" alt="git" class="git-image" <div>
+ 
+    <div>
     <dl>
         <dt>git add</dt>
         <dd>Moves changes from the working directory to the staging area.
